trading.log
  File "/home/runner/work/arkana/arkana/main.py", line 167
    return df.dropna(
                    ^
SyntaxError: '(' was never closed
